tests/type-logic.stderr
error: 
   ┌─ test:17:5
   │
17 │ _ : _ -> a
   │     ^^^^^^
   │     │
   │     could not determine the type of this expression
   │     this has type `_ -> False`
   │
   = annotate the type with `::`: `:: {%type%}`
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: 
   ┌─ test:21:5
   │
21 │ _ : _ -> b
   │     ^^^^^^
   │     │
   │     could not determine the type of this expression
   │     this has type `_ -> False`
   │
   = annotate the type with `::`: `:: {%type%}`
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: 
   ┌─ test:25:5
   │
25 │ _ : _ -> c
   │     ^^^^^^
   │     │
   │     could not determine the type of this expression
   │     this has type `_ -> True`
   │
   = annotate the type with `::`: `:: {%type%}`
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

